--- a/templates/home.jinja2
+++ b/templates/home.jinja2
@@ -1,7 +1,7 @@
 {% extends 'base.jinja2' %}
 
 {% block content %}
-<h1>Welcome to your blog.</h1>
+<h1 style={'background-color':}>Welcome to your blog.</h1>
 <h2>Posts</h2>
 
 <ul>
